Ajuste no index.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Conheça os meus serviços.</h5>
                                     <p>Saiba de quais maneiras posso melhor atender o seu negócio, com atendimentos
-                                        personalizados.</p>
+                                        ágil e personalizado.</p>
                                 </div>
                 
                             </div>
